Bug 79716 - [regression] i915_enable_fbc != 0 for HD Graphics 5000
Summary: [regression] i915_enable_fbc != 0 for HD Graphics 5000
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Imre Deak
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-06 09:35 UTC by Jon Kristensen
Modified: 2017-07-24 22:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Jon Kristensen 2014-06-06 09:35:59 UTC
Using the Debian Unstable and Experimental versions of xserver-xorg-video-intel (2:2.21.15-2+b1 and 2:2.99.911+git20140529-1~exp2, respectively), the driver does not set i915_enable_fbc=0 for HD Graphics 5000.

By default, the X session can only be displayed for less than one second at the time. By switching away from X (Ctrl+Alt+F1), and then back (Ctrl+Alt+F7), I can see a working X session for less than a second.

Setting i915_enable_fbc to 0 seems to allow for normal X use.
Comment 2 Jani Nikula 2014-06-10 16:46:06 UTC
commit 1f1a3fdf410dc35560d32c23eae307dce04f566e
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jun 6 10:37:11 2014 +0100

    drm/i915: Disable FBC by default also on Haswell and later

Thanks for the report and testing.
Comment 3 Daniel Vetter 2014-06-18 14:07:56 UTC
Mark as regression for stats.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.